--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.7.1",
     "react-router": "^6.8.1",
@@ -49,6 +50,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/react": "^18.0.28"
+    "@types/react": "^18.0.28",
+    "@types/react-flatpickr": "^3.8.8"
   }
 }
